webook/webook-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-app-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webook-app
  template:
    metadata:
      labels:
        app: webook-app
    spec:
      containers:
        - name: webook-app
          image: wuliuqi/webook:v0.0.1
          ports:
            - containerPort: 8081
