webook/webook-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-app-service
spec:
  selector:
    app: webook-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
