webook/webook-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql-service
spec:
  selector:
    app: webook-mysql
  ports:
    - protocol: TCP
      port: 3308
      targetPort: 3306
  type: LoadBalancer
