webook/webook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nic
  rules:
    # 这里填写主机IP地址的话可以直接对外暴露
    - host: webook
      http:
        paths:
          - backend:
              service:
                name: webook-app-service
                port:
                  number: 80
            path: /
            pathType: Prefix
